--- a/baufinanzierung.html
+++ b/baufinanzierung.html
@@ -52,7 +52,7 @@
 		
 		<div class="container-fluid container-page-content">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6 col-summary">
 					<div class="page-summary">
 						<h2 class="page-title">Baufinanzierung</h2>
 						<div class="page-content">
