--- a/datenschutz.html
+++ b/datenschutz.html
@@ -47,7 +47,7 @@
 				</nav>
 				<a class="btn-login" href="https://friendly-finance.finlink.de/friendly-finance/widgets/login?size=small" target="_blank"><img src="images/btn-login.png"/><span class="login-txt">Log In</span></a>
 			</div>
-		  </div>>
+		  </div>
 		</div>
 		
 		<div class="container-fluid container-page-content">
