--- a/home.html
+++ b/home.html
@@ -154,7 +154,7 @@
 				</div>
 			</div>
 			
-			<div class="row unser-team">
+			<div class="row unser-team unser-team-desktop">
 				<div class="col-md-12">
 					<h2>Unser Team</h2>
 				</div>
@@ -187,6 +187,56 @@
 							<p class="card-text">Geschäftsführer</p>
 							<a href="uber-uns.html#andre" class="team-btn">MEHR ÜBER MICH</a>
 						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row unser-team-mobile">
+				<div class="col-md-12">
+					<h2>Unser Team</h2>
+					<!-- Carousel -->
+					<div id="unserTeam" class="carousel slide unser-carousel" data-bs-ride="carousel">
+
+					  <!-- Indicators/dots -->
+					  <div class="carousel-indicators">
+						<button type="button" data-bs-target="#unserTeam" data-bs-slide-to="0" class="active"></button>
+						<button type="button" data-bs-target="#unserTeam" data-bs-slide-to="1"></button>
+						<button type="button" data-bs-target="#unserTeam" data-bs-slide-to="2"></button>
+					  </div>
+					  
+					  <!-- The slideshow/carousel -->
+					  <div class="carousel-inner unser-team">
+						<div class="carousel-item active">
+							<div class="unser-card">
+								<img src="images/manfred.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Manfred Meißner</h5>
+									<p class="card-text">Geschäftsführer</p>
+									<a href="uber-uns.html#manfred" class="team-btn">MEHR ÜBER MICH</a>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="unser-card">
+								<img src="images/nina.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Nina Haake</h5>
+									<p class="card-text">Assistenz der Geschäftsführung</p>
+									<a href="uber-uns.html#nina" class="team-btn">MEHR ÜBER MICH</a>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="unser-card">
+								<img src="images/andre.png" class="card-img-top" alt="...">
+								<div class="card-body">
+									<h5 class="card-title">Andre Tiedemann</h5>
+									<p class="card-text">Geschäftsführer</p>
+									<a href="uber-uns.html#andre" class="team-btn">MEHR ÜBER MICH</a>
+								</div>
+							</div> 
+						</div>
+					  </div>
 					</div>
 				</div>
 			</div>
