--- a/baufinanzierung.html
+++ b/baufinanzierung.html
@@ -52,7 +52,7 @@
 		
 		<div class="container-fluid container-page-content">
 			<div class="row">
-				<div class="col-md-6 col-summary">
+				<div class="col-md-7 col-lg-6 col-summary">
 					<div class="page-summary">
 						<h2 class="page-title">Baufinanzierung</h2>
 						<div class="page-content">
@@ -70,7 +70,7 @@
 						<button class="btn-termin"><a href="terminvereinbarung.html">Terminvereinbarung</a></button>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-5 col-lg-6 baufina-right">
 					<div class="photo-family">
 						<img src="images/photo_family.png" class="img-family"/>
 					</div>
