--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" media="screen" rel="stylesheet">
+		<link href="css/responsive.css" media="screen" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
 	</head>
 	<body>
@@ -240,7 +241,9 @@
 					</div>
 				</div>
 			</div>
-			
+		</div>
+
+		<div class="container-fluid container-footer">
 			<div class="row home-footer-address">
 				<div class="col-md-12 hzusage-footer">
 					<p>36 Stunden bei vollständigen Unterlagen (Bankarbeitstage)</p>
@@ -252,9 +255,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-
-		<div class="container-fluid container-footer">
 		  <footer class="row footer-section">
 			<div class="col-md-3 footer-menu">
 				<ul class="menu-group">
