--- a/impressum.html
+++ b/impressum.html
@@ -8,7 +8,7 @@
 
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-		<link href="css/responsive.css" rel="stylesheet">
+		<link href="css/responsive.css" media="screen" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
 	</head>
 	<body>
