Committed tab view changes

--- a/anschlussfinanzierung.html
+++ b/anschlussfinanzierung.html
@@ -53,7 +53,7 @@
 		<div class="container-fluid container-page-content">
 			<div class="row">
 				<div class="col-md-12">
-					<div class="ansch-content-full">
+					<div class="ansch-content-full page-acc-content">
 						<h2 class="page-title">Anschlussfinanzierung</h2>
 						<div class="page-content ansch-content">
 							<p>Sie besitzen schon eine Immobilienfinanzierung und Ihre Zinsbindung läuft aus? Oder Sie möchten sich heute schon einen günstigen Zins zum Ablauf der Zinsbindung sichern?</p>
