--- a/modernisierung.html
+++ b/modernisierung.html
@@ -53,7 +53,7 @@
 		<div class="container-fluid container-page-content">
 			<div class="row">
 				<div class="col-md-12">
-					<div class="modern-content-full">
+					<div class="modern-content-full page-acc-content">
 						<h2 class="page-title">Modernisierung</h2>
 						<div class="page-content modern-content">
 							<p>Sie möchten ihr Bad sanieren, ein Glasdach für ihre Terrasse, eine neue Heizungsanlage oder anderweitig Investieren?</p> 
