--- a/projektfinanzierung.html
+++ b/projektfinanzierung.html
@@ -53,7 +53,7 @@
 		<div class="container-fluid container-page-content">
 			<div class="row">
 				<div class="col-md-12">
-					<div class="projekt-content-full">
+					<div class="projekt-content-full page-acc-content">
 						<h2 class="page-title">Projektfinanzierung</h2>
 						<div class="page-content projekt-content">
 							<p>Sie haben eine Vision oder ein Projekt, welches sie finanzieren möchten? Mit uns haben sie einen erfahren und starken Partner an Ihrer Seite, der ihnen hilft eine maßgeschneiderte Lösung zu finden.</p>
