Committed mobile view changes

--- a/uber-uns.html
+++ b/uber-uns.html
@@ -93,7 +93,7 @@
 									<h3>Nina Haake</h3>
 									<h6 class="sub-title">Assistenz der Geschäftsführung</h6>
 									<div class="birth-date sub-detail">Jahrgang 1988</div>
-									<div class="education sub-detail">Gelernte Kauffrau für Spedition- und Logistikdienstleistung</div>
+									<div class="education sub-detail"><span>Gelernte Kauffrau für Spedition- und Logistikdienstleistung</span></div>
 									<div class="people-no sub-detail">Verheiratet 2 Kinder</div>
 									<div class="occupation sub-detail"><span>Mein Organisationsgeschick kann ich nun auch in diesem Bereich gut zeigen.</span></div>
 								</div>
