--- a/home.html
+++ b/home.html
@@ -6,20 +6,20 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" media="screen" rel="stylesheet">
 		<link href="css/responsive.css" media="screen" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+		<link href="fonts/poppins.css" media="screen" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container-fluid container-finance">
 		  <div class="row header-section">
-			<div class="col-5 col-md-3">
+			<div class="col-5 col-md-2 col-lg-3">
 				<div class="section-logo">
 					<a href="home.html"><img src="images/logo.png"/></a>
 				</div>
 			</div>
-			<div class="col-menu col-7 col-md-9">
+			<div class="col-menu col-7 col-md-10 col-lg-9">
 				<nav class="navbar navbar-expand-lg menu-finance">
 					<div class="navbar-header">
 					  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -299,6 +299,6 @@
 		
 		<script src ="jquery/jquery-3.6.0.min.js"></script>
 		<script src ="jquery/script.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="jquery/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
