--- a/uber-uns.html
+++ b/uber-uns.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<link href="css/responsive.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+		<link href="fonts/poppins.css" media="screen" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container-fluid container-finance">
@@ -182,6 +182,6 @@
 		
 		<script src ="jquery/jquery-3.6.0.min.js"></script>
 		<script src ="jquery/script.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="jquery/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
