--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 					  </div>
 					</div>
 				</nav>
-				<a class="btn-login" href="https://friendly-finance.finlink.de/friendly-finance/widgets/login?size=small" target="_blank"><img src="images/btn-login.png"/><span class="login-txt">Log In</span></a>
+				<a class="btn-login" href="https://friendly-finance.finlink.de/friendly-finance/widgets/login?size=small" target="_blank"><span class="login-txt">Log In</span></a>
 			</div>
 		  </div>
 		  
