--- a/terminvereinbarung.html
+++ b/terminvereinbarung.html
@@ -14,12 +14,12 @@
 	<body>
 		<div class="container-fluid container-finance">
 		  <div class="row header-section">
-			<div class="col-5 col-md-3">
+			<div class="col-5 col-md-2 col-lg-3">
 				<div class="section-logo">
 					<a href="home.html"><img src="images/logo.png"/></a>
 				</div>
 			</div>
-			<div class="col-menu col-7 col-md-9">
+			<div class="col-menu col-7 col-md-10 col-lg-9">
 				<nav class="navbar navbar-expand-lg menu-finance">
 					<div class="navbar-header">
 					  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -45,7 +45,7 @@
 					  </div>
 					</div>
 				</nav>
-				<a class="btn-login" href="https://friendly-finance.finlink.de/friendly-finance/widgets/login?size=small" target="_blank"><img src="images/btn-login.png"/><span class="login-txt">Log In</span></a>
+				<a class="btn-login" href="https://friendly-finance.finlink.de/friendly-finance/widgets/login?size=small" target="_blank"><span class="login-txt">Log In</span></a>
 			</div>
 		  </div>
 		</div>
@@ -66,7 +66,7 @@
 									<div class="card-body">
 										<h5 class="card-title">Manfred Meißner</h5>
 										<p class="card-text">Geschäftsführer</p>
-										<a href="#" class="team-btn">MEHR ÜBER MICH</a>
+										<a href="uber-uns.html#manfred" class="team-btn">MEHR ÜBER MICH</a>
 									</div>
 								</div>
 							</div>
@@ -76,7 +76,7 @@
 									<div class="card-body">
 										<h5 class="card-title">Nina Haake</h5>
 										<p class="card-text">Assistenz der Geschäftsführung</p>
-										<a href="#" class="team-btn">MEHR ÜBER MICH</a>
+										<a href="uber-uns.html#nina" class="team-btn">MEHR ÜBER MICH</a>
 									</div>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 									<div class="card-body">
 										<h5 class="card-title">Andre Tiedemann</h5>
 										<p class="card-text">Geschäftsführer</p>
-										<a href="#" class="team-btn">MEHR ÜBER MICH</a>
+										<a href="uber-uns.html#andre" class="team-btn">MEHR ÜBER MICH</a>
 									</div>
 								</div>
 							</div>
