Inner page edits

--- a/uber-uns.html
+++ b/uber-uns.html
@@ -69,7 +69,7 @@
 									<h3>Manfred Meißner</h3>
 									<h6 class="sub-title">Geschäftsführer</h6>
 									<div class="birth-date sub-detail">Jahrgang 1973</div>
-									<div class="education sub-detail">Sparkassenbetriebswirt</div>
+									<div class="education sub-detail"><span>Sparkassenbetriebswirt</span></div>
 									<div class="people-no sub-detail">Verheiratet 2 Kinder</div>
 									<div class="occupation sub-detail"><span>5 Jahre fachlicher Leiter für Baufinanzierungen der Sparkasse Bremen AG. Über 20 Jahre Berufserfahrung</span></div>
 								</div>
@@ -79,7 +79,6 @@
 							<div class="button-uber">
 								<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 								<div class="kontakt-button">
-									<img src="images/btn-kontakt-bg1.png"/>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
 								</div>
 							</div>
@@ -103,7 +102,6 @@
 							<div class="button-uber">
 								<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 								<div class="kontakt-button">
-									<img src="images/btn-kontakt-bg1.png"/>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
 								</div>
 							</div>
@@ -117,7 +115,7 @@
 									<h3>Andre Tiedemann</h3>
 									<h6 class="sub-title">Geschäftsführer</h6>
 									<div class="birth-date sub-detail">Jahrgang 1987</div>
-									<div class="education sub-detail">Bankbetriebswirt</div>
+									<div class="education sub-detail"><span>Bankbetriebswirt</span></div>
 									<div class="people-no sub-detail">Verheiratet 2 Kinder</div>
 									<div class="occupation sub-detail"><span>mit vielen Jahren in der Volksbankengruppe, sowohl in der Kreditsachbearbeitung als auch in der Beratung und der seit 2019 laufenden Selbstständigkeit blicke ich auf über 15 Jahre Berufserfahrung zurück</span></div>
 								</div>
@@ -127,7 +125,6 @@
 							<div class="button-uber">
 								<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 								<div class="kontakt-button">
-									<img src="images/btn-kontakt-bg1.png"/>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
 								</div>
 							</div>
