--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
 									<img src="images/bg-icon.png" class="vector-bg"/>
 									<img src="images/icon-building.png" class="card-vector"/>
 								</div>
-								<h4>Baufinanzierung</h4>
+								<h4><a class="card-item" href="baufinanzierung.html">Baufinanzierung</a></h4>
 								<p>Neubauvorhaben</p>
 								<p>Kauf einer Bestandsimmobilie</p>
 								<p>Kauf eines Anlageobjektes</p>
@@ -98,7 +98,7 @@
 									<img src="images/bg-icon.png" class="vector-bg"/>
 									<img src="images/icon_home.png" class="card-vector"/>
 								</div>
-								<h4>Modernisierung</h4>
+								<h4><a class="card-item" href="modernisierung.html">Modernisierung</a></h4>
 								<p>Heizung</p>
 								<p>Bäder</p>
 								<p>Energetische Maßnahmen</p>
@@ -111,7 +111,7 @@
 									<img src="images/bg-icon.png" class="vector-bg"/>
 									<img src="images/icon_money.png" class="card-vector"/>
 								</div>
-								<h4>Anschlussfinanzierung</h4>
+								<h4><a class="card-item" href="anschlussfinanzierung.html">Anschlussfinanzierung</a></h4>
 								<p>Prolongation</p>
 								<p>Forwarddarlehen</p>
 								<div class="img-card-bottom"><img src="images/card-bottom.png"/></div>
@@ -122,7 +122,7 @@
 									<img src="images/bg-icon.png" class="vector-bg"/>
 									<img src="images/icon-analytics.png" class="card-vector"/>
 								</div>
-								<h4>Projektfinanzierung</h4>
+								<h4><a class="card-item" href="projektfinanzierung.html">Projektfinanzierung</a></h4>
 								<p>Bauträgerfinanzierung</p>
 								<p>Gewerbeobjekte</p>
 								<div class="img-card-bottom"><img src="images/card-bottom.png"/></div>
