updated css for typeWriter style

--- a/home.html
+++ b/home.html
@@ -65,10 +65,10 @@
 						<p>Finanzierungslösung für ihre</p>
 						<div class="txt-scroller">
 						  <ul>
-							<li class="item-1">Baufinanzierung</li>
-							<li class="item-2">Anschlussfinanzierung</li>
-							<li class="item-3">Modernisierung</li>
-							<li class="item-4">Projektfinanzierung</li>
+							<li class="item1">Baufinanzierung</li>
+							<!-- <li class="item2">Anschlussfinanzierung</li>
+							<li class="item3">Modernisierung</li>
+							<li class="item4">Projektfinanzierung</li> -->
 						  </ul>  
 						</div>
 					</div>
