--- a/baufinanzierung.html
+++ b/baufinanzierung.html
@@ -77,7 +77,7 @@
 					<div class="baufina-list-content">
 						<ul class="baufina-list">
 							<li>Einfamilienhaus </li>
-							<li>Reihenhauses </li>
+							<li>Reihenhaus </li>
 							<li>Doppelhaushälfte </li>
 							<li>Eigentumswohnung </li>
 							<li>Mehrfamilienhaus</li>
