--- a/uber-uns.html
+++ b/uber-uns.html
@@ -63,7 +63,10 @@
 					<div class="team-uber">
 						<div class="single-uber-content">
 							<div class="uber-details-full" id="manfred">
-								<img src="images/uber-manfred.png"/>
+								<div class="manfred-img-full">
+									<span class="border-manfred"></span>
+									<img src="images/uber-manfred.png"/>
+								</div>
 								
 								<div class="uber-details">
 									<h3>Manfred Meißner</h3>
@@ -77,9 +80,13 @@
 							<p>Ob die klassische Baufinanzierung oder ein umfangreiches Projekt, Angestellter oder Unternehmer – meine Passion ist es, meinen Kunden ihre Finanzierung und Träume zu ermöglichen.</p>
 							<p><strong>Nutzen Sie meine Erfahrung und enge Vernetzung mit Bankpartnern vor Ort und lassen sie uns gemeinsam eine individuelle Lösung für Sie finden.</strong></p>
 							<div class="button-uber">
-								<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 								<div class="kontakt-button">
+									<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
+								</div>
+								<div class="social-icon">
+									<span class="icon-social icon-email"><a href = "mailto: m.meissner@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
+									<span class="icon-social icon-phone"><a href="tel:+49 173 4776560"><img src="images/icon-phone.png"/></a></span>
 								</div>
 							</div>
 						</div>
@@ -100,9 +107,13 @@
 							<p>Ich bin größtenteils im Backoffice tätig und unterstütze hier die Geschäftsführung in allen Bereichen.</p>
 							<p><strong>Ich freue mich von Ihnen zu hören.</strong></p>
 							<div class="button-uber">
-								<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 								<div class="kontakt-button">
+									<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
+								</div>
+								<div class="social-icon">
+									<span class="icon-social icon-email"><a href = "mailto: info@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
+									<span class="icon-social icon-phone"><a href="tel:+49 421 61072561"><img src="images/icon-phone.png"/></a></span>
 								</div>
 							</div>
 						</div>
@@ -123,9 +134,13 @@
 							<p>Egal ob die eigenen vier Wände, die erste Anlageimmobilie oder das Großprojekt, keine Finanzierung ist wie die andere. Das ist es was für mich den Reiz der Finanzierungsberatung ausmacht und mich Tag für Tag für meine Kunden antreibt, die „passende Lösung“ zu finden.</p>
 							<p><strong>Nutzen Sie mein Netzwerk aus vielen Ansprechpartnern der Region sowohl im Privat- als auch im Firmenfinanzierungsbereich.</strong></p>
 							<div class="button-uber">
-								<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 								<div class="kontakt-button">
+									<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
+								</div>
+								<div class="social-icon">
+									<span class="icon-social icon-email"><a href = "mailto: a.tiedemann@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
+									<span class="icon-social icon-phone"><a href="tel:+49 176 64062620"><img src="images/icon-phone.png"/></a></span>
 								</div>
 							</div>
 						</div>
