Minor link change

--- a/uber-uns.html
+++ b/uber-uns.html
@@ -81,7 +81,7 @@
 							<p><strong>Nutzen Sie meine Erfahrung und enge Vernetzung mit Bankpartnern vor Ort und lassen sie uns gemeinsam eine individuelle Lösung für Sie finden.</strong></p>
 							<div class="button-uber">
 								<div class="kontakt-button">
-									<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
+									<button class="btn-uber"><a class="link-btn" href="https://friendly-finance.finlink.de/start-widget/finance_type?primaryColor=000" target="_blank">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
 								</div>
 								<div class="social-icon">
@@ -108,7 +108,7 @@
 							<p><strong>Ich freue mich von Ihnen zu hören.</strong></p>
 							<div class="button-uber">
 								<div class="kontakt-button">
-									<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
+									<button class="btn-uber"><a class="link-btn" href="https://friendly-finance.finlink.de/start-widget/finance_type?primaryColor=000" target="_blank">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
 								</div>
 								<div class="social-icon">
@@ -135,7 +135,7 @@
 							<p><strong>Nutzen Sie mein Netzwerk aus vielen Ansprechpartnern der Region sowohl im Privat- als auch im Firmenfinanzierungsbereich.</strong></p>
 							<div class="button-uber">
 								<div class="kontakt-button">
-									<button class="btn-uber"><a class="link-btn" href="terminvereinbarung.html">Terminvereinbarung</a></button>
+									<button class="btn-uber"><a class="link-btn" href="https://friendly-finance.finlink.de/start-widget/finance_type?primaryColor=000" target="_blank">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
 								</div>
 								<div class="social-icon">
