--- a/anschlussfinanzierung.html
+++ b/anschlussfinanzierung.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
@@ -57,8 +57,8 @@
 						<h2 class="page-title">Anschlussfinanzierung</h2>
 						<div class="page-content ansch-content">
 							<p>Sie besitzen schon eine Immobilienfinanzierung und Ihre Zinsbindung läuft aus? Oder Sie möchten sich heute schon einen günstigen Zins zum Ablauf der Zinsbindung sichern?</p>
-							<p>Dann sind Sie bei uns genau richtig!?</p>
-							<p>In einem persönlichen Gespräch klären wir:?</p>
+							<p>Dann sind Sie bei uns genau richtig!</p>
+							<p>In einem persönlichen Gespräch klären wir:</p>
 							
 							<ul class="ansch-list">
 								<li>Lohnt es sich bei der Hausbank zu bleiben oder ist ein Bankwechsel günstiger</li>
