--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
@@ -62,7 +62,7 @@
 				<div class="col-md-7">
 					<div class="content-slider">
 						<p>Immer die optimale</p>
-						<p>Finanzierungslösung für ihre</p>
+						<p>Finanzierungslösung für Ihre</p>
 						<div class="txt-scroller">
 						  <ul>
 							<li class="item1">Baufinanzierung</li>
@@ -230,7 +230,7 @@
 							<div class="unser-card">
 								<img src="images/andre.png" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h5 class="card-title">Andre Tiedemann</h5>
+									<h5 class="card-title">André Tiedemann</h5>
 									<p class="card-text">Geschäftsführer</p>
 									<a href="uber-uns.html#andre" class="team-btn">MEHR ÜBER MICH</a>
 								</div>
