--- a/terminvereinbarung.html
+++ b/terminvereinbarung.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
@@ -67,6 +67,10 @@
 										<h5 class="card-title">Manfred Meißner</h5>
 										<p class="card-text">Geschäftsführer</p>
 										<a href="uber-uns.html#manfred" class="team-btn">MEHR ÜBER MICH</a>
+										<div class="social-icon">
+											<span class="icon-social icon-email"><a href = "mailto: m.meissner@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
+											<span class="icon-social icon-phone"><a href="tel:+49 173 4776560"><img src="images/icon-phone.png"/></a></span>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -77,6 +81,10 @@
 										<h5 class="card-title">Nina Haake</h5>
 										<p class="card-text">Assistenz der Geschäftsführung</p>
 										<a href="uber-uns.html#nina" class="team-btn">MEHR ÜBER MICH</a>
+										<div class="social-icon">
+											<span class="icon-social icon-email"><a href = "mailto: m.meissner@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
+											<span class="icon-social icon-phone"><a href="tel:+49 173 4776560"><img src="images/icon-phone.png"/></a></span>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -84,9 +92,13 @@
 								<div class="unser-card">
 									<img src="images/andre.png" class="card-img-top" alt="...">
 									<div class="card-body">
-										<h5 class="card-title">Andre Tiedemann</h5>
+										<h5 class="card-title">André Tiedemann</h5>
 										<p class="card-text">Geschäftsführer</p>
 										<a href="uber-uns.html#andre" class="team-btn">MEHR ÜBER MICH</a>
+										<div class="social-icon">
+											<span class="icon-social icon-email"><a href = "mailto: m.meissner@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
+											<span class="icon-social icon-phone"><a href="tel:+49 173 4776560"><img src="images/icon-phone.png"/></a></span>
+										</div>
 									</div>
 								</div>
 							</div>
