--- a/uber-uns.html
+++ b/uber-uns.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
@@ -75,6 +75,8 @@
 									<div class="education sub-detail"><span>Sparkassenbetriebswirt</span></div>
 									<div class="people-no sub-detail">Verheiratet 2 Kinder</div>
 									<div class="occupation sub-detail"><span>5 Jahre fachlicher Leiter für Baufinanzierungen der Sparkasse Bremen AG. Über 20 Jahre Berufserfahrung</span></div>
+									<div class="sub-detail icon-email"><a href = "mailto: m.meissner@friendly-finance.de">m.meissner@friendly-finance.de</a></div>
+									<div class="sub-detail icon-phone"><a href="tel:+49 173 4776560">+49 173 4776560</a></div>
 								</div>
 							</div>
 							<p>Ob die klassische Baufinanzierung oder ein umfangreiches Projekt, Angestellter oder Unternehmer – meine Passion ist es, meinen Kunden ihre Finanzierung und Träume zu ermöglichen.</p>
@@ -83,10 +85,6 @@
 								<div class="kontakt-button">
 									<button class="btn-uber"><a class="link-btn" href="https://friendly-finance.finlink.de/start-widget/finance_type?primaryColor=000" target="_blank">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
-								</div>
-								<div class="social-icon">
-									<span class="icon-social icon-email"><a href = "mailto: m.meissner@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
-									<span class="icon-social icon-phone"><a href="tel:+49 173 4776560"><img src="images/icon-phone.png"/></a></span>
 								</div>
 							</div>
 						</div>
@@ -102,6 +100,8 @@
 									<div class="education sub-detail"><span>Gelernte Kauffrau für Spedition- und Logistikdienstleistung</span></div>
 									<div class="people-no sub-detail">Verheiratet 2 Kinder</div>
 									<div class="occupation sub-detail"><span>Mein Organisationsgeschick kann ich nun auch in diesem Bereich gut zeigen.</span></div>
+									<div class="sub-detail icon-email"><a href = "mailto: info@friendly-finance.de">info@friendly-finance.de</a></div>
+									<div class="sub-detail icon-phone"><a href="tel:+49 421 61072561">+49 421 61072561</a></div>
 								</div>
 							</div>
 							<p>Ich bin größtenteils im Backoffice tätig und unterstütze hier die Geschäftsführung in allen Bereichen.</p>
@@ -111,10 +111,6 @@
 									<button class="btn-uber"><a class="link-btn" href="https://friendly-finance.finlink.de/start-widget/finance_type?primaryColor=000" target="_blank">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
 								</div>
-								<div class="social-icon">
-									<span class="icon-social icon-email"><a href = "mailto: info@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
-									<span class="icon-social icon-phone"><a href="tel:+49 421 61072561"><img src="images/icon-phone.png"/></a></span>
-								</div>
 							</div>
 						</div>
 						
@@ -123,12 +119,14 @@
 								<img src="images/uber-andre.png"/>
 								
 								<div class="uber-details">
-									<h3>Andre Tiedemann</h3>
+									<h3>André Tiedemann</h3>
 									<h6 class="sub-title">Geschäftsführer</h6>
 									<div class="birth-date sub-detail">Jahrgang 1987</div>
 									<div class="education sub-detail"><span>Bankbetriebswirt</span></div>
 									<div class="people-no sub-detail">Verheiratet 2 Kinder</div>
 									<div class="occupation sub-detail"><span>mit vielen Jahren in der Volksbankengruppe, sowohl in der Kreditsachbearbeitung als auch in der Beratung und der seit 2019 laufenden Selbstständigkeit blicke ich auf über 15 Jahre Berufserfahrung zurück</span></div>
+									<div class="sub-detail icon-email"><a href = "mailto: a.tiedemann@friendly-finance.de">a.tiedemann@friendly-finance.de</a></div>
+									<div class="sub-detail icon-phone"><a href="tel:+49 176 64062620">+49 176 64062620</a></div>
 								</div>
 							</div>
 							<p>Egal ob die eigenen vier Wände, die erste Anlageimmobilie oder das Großprojekt, keine Finanzierung ist wie die andere. Das ist es was für mich den Reiz der Finanzierungsberatung ausmacht und mich Tag für Tag für meine Kunden antreibt, die „passende Lösung“ zu finden.</p>
@@ -137,10 +135,6 @@
 								<div class="kontakt-button">
 									<button class="btn-uber"><a class="link-btn" href="https://friendly-finance.finlink.de/start-widget/finance_type?primaryColor=000" target="_blank">Terminvereinbarung</a></button>
 									<button class="btn-kontakt"><a class="link-btn" href="kontakt.html">Kontakt</a></button>
-								</div>
-								<div class="social-icon">
-									<span class="icon-social icon-email"><a href = "mailto: a.tiedemann@friendly-finance.de"><img src="images/icon-email.png"/></a></span>
-									<span class="icon-social icon-phone"><a href="tel:+49 176 64062620"><img src="images/icon-phone.png"/></a></span>
 								</div>
 							</div>
 						</div>
