--- a/baufinanzierung.html
+++ b/baufinanzierung.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
@@ -60,8 +60,8 @@
 							<p>Anlageimmobilie:</p> 
 							<p>In einem persönlichen Gespräch klären wir Ihren individuellen Bedarf und finden genau die individuelle</p> 
 							<p>Finanzierungslösung, die am Besten zu Ihnen passt.</p> 
-							<p>Hierbei erläutern wir ihnen die Unterschiedlichen Möglichkeiten der Zinsbindungen, Finanzierungsformen, Fördermittel und individuellen Unterscheide der jeweiligen Bankpartner.</p> 
-							<p>Ob Neubau oder Bestandsimmobilie, wir finden die passende Finanzierung für ihr</p>
+							<p>Hierbei erläutern wir Ihnen die unterschiedlichen Möglichkeiten der Zinsbindungen, Finanzierungsformen, Fördermittel und individuellen Unterschiede der jeweiligen Bankpartner.</p> 
+							<p>Ob Neubau oder Bestandsimmobilie, wir finden die passende Finanzierung für ihr Vorhaben.</p>
 						</div>
 						<div class="summary-shadow"><img src="images/summary-shadow.png"/></div>
 					</div>
