--- a/kontakt.html
+++ b/kontakt.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
