--- a/modernisierung.html
+++ b/modernisierung.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
@@ -56,9 +56,9 @@
 					<div class="modern-content-full page-acc-content">
 						<h2 class="page-title">Modernisierung</h2>
 						<div class="page-content modern-content">
-							<p>Sie möchten ihr Bad sanieren, ein Glasdach für ihre Terrasse, eine neue Heizungsanlage oder anderweitig Investieren?</p> 
-							<p>Wir bieten Ihnen individuelle Lösungen, zum Teil mit vereinfachter Bonititätsprüfung und ohne Grundschuldeintragung.</p> 
-							<p>Lassen Sie und in einem persönlichen Gespräch klären, wie wir Ihr Vorhaben realisieren können.</p>
+							<p>Sie möchten Ihr Bad sanieren, ein Glasdach für Ihre Terrasse, eine neue Heizungsanlage oder anderweitig Investieren?</p> 
+							<p>Wir bieten Ihnen individuelle Lösungen, zum Teil mit vereinfachter Bonitätsprüfung und ohne Grundschuldeintragung.</p> 
+							<p>Lassen Sie uns in einem persönlichen Gespräch klären, wie wir Ihr Vorhaben realisieren können.</p>
 						</div>
 						<div class="summary-shadow"><img src="images/modern-shadow.png"/></div>
 					</div>
