--- a/projektfinanzierung.html
+++ b/projektfinanzierung.html
@@ -38,7 +38,7 @@
 								<li><a class="dropdown-item" href="36hzusage.html">36h Zusage</a></li>
 							</ul>
 						</div>
-						<a class="nav-link" href="terminvereinbarung.html">Terminvereinbarung</a>
+						<a class="nav-link" href="terminvereinbarung.html">Team</a>
 						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
@@ -56,8 +56,8 @@
 					<div class="projekt-content-full page-acc-content">
 						<h2 class="page-title">Projektfinanzierung</h2>
 						<div class="page-content projekt-content">
-							<p>Sie haben eine Vision oder ein Projekt, welches sie finanzieren möchten? Mit uns haben sie einen erfahren und starken Partner an Ihrer Seite, der ihnen hilft eine maßgeschneiderte Lösung zu finden.</p>
-							<p>Wir unterstützen sie bei ihren Projekten, egal ob es sich hierbei um ein Bauträgergeschäft, eine Gewerbeimmobilie oder sonstige Investitionen handelt.</p>
+							<p>Sie haben eine Vision oder ein Projekt, welches Sie finanzieren möchten? Mit uns haben Sie einen erfahren und starken Partner an Ihrer Seite, der Ihnen hilft eine maßgeschneiderte Lösung zu finden.</p>
+							<p>Wir unterstützen Sie bei Ihren Projekten, egal ob es sich hierbei um ein Bauträgergeschäft, eine Gewerbeimmobilie oder sonstige Investitionen handelt.</p>
 							<p class="txt-large">Vereinbaren Sie gleich einen Termin mit uns!</p>
 						</div>
 						<div class="summary-shadow"><img src="images/projekt-shadow.png"/></div>
