--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@
 					<div class="unser-card">
 						<img src="images/andre.png" class="card-img-top" alt="...">
 						<div class="card-body">
-							<h5 class="card-title">Andre Tiedemann</h5>
+							<h5 class="card-title">André Tiedemann</h5>
 							<p class="card-text">Geschäftsführer</p>
 							<a href="uber-uns.html#andre" class="team-btn">MEHR ÜBER MICH</a>
 						</div>
