--- a/36hzusage.html
+++ b/36hzusage.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Friendly Finance</title>
+		<title>Friendly Finance - Immer die optimale Finanzierungslösung</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
+		<meta name="description" content="Ihr Partner bei Finanzierungen - kostenlose Beratung zu
+		Baufinanzierung, Anschlussfinanzierung, Modernisierung und Projektfinanzierung.">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
