--- a/terminvereinbarung.html
+++ b/terminvereinbarung.html
@@ -12,6 +12,29 @@
 		<link href="css/style.css" rel="stylesheet">
 		<link href="css/responsive.css" rel="stylesheet">
 		<link href="fonts/poppins.css" media="screen" rel="stylesheet">
+		<!-- ProvenExpert ProSeal Widget -->
+<noscript>
+	<a href="https://www.provenexpert.com/de-de/friendly-finance-gmbh?utm_source=seals&utm_campaign=proseal&utm_medium=profile&utm_content=ec7162ee-2b25-44b1-96ac-127bb6f725ac" target="_blank" title="Kundenbewertungen & Erfahrungen zu Friendly Finance GmbH. " class="pe-pro-seal-more-infos" >Mehr Infos</a>
+	</noscript>
+	<script src="https://s.provenexpert.net/seals/proseal.js" ></script>
+	<script id="proSeal">
+		  window.addEventListener('load', function(event) {
+			  window.provenExpert.proSeal({
+				widgetId: "ec7162ee-2b25-44b1-96ac-127bb6f725ac",
+				language:"de-DE",
+				bannerColor: "#018343",
+				textColor: "#FFFFFF",
+				showReviews: true,
+				hideDate: false,
+				hideName: false,
+				bottom: "250px",
+				stickyToSide: "right",
+				googleStars: true,
+				zIndex: "9999",
+			  })
+		  });
+	</script>
+	<!-- ProvenExpert ProSeal Widget -->
 	</head>
 	<body>
 		<div class="container-fluid container-finance">
@@ -41,7 +64,6 @@
 							</ul>
 						</div>
 						<a class="nav-link" href="terminvereinbarung.html">Team</a>
-						<a class="nav-link" href="uber-uns.html">Über uns</a>
 						<a class="nav-link" href="kontakt.html">Kontakt</a>
 						<a class="nav-link" href="36hzusage.html">36h Zusage</a>
 					  </div>
